Updated all the recipes.html

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -10,6 +10,8 @@
     <h1>Carbonara</h1>
     <img src="../images/carbonara.png" height="310" width="310" alt="carbonara"/>
     <h3>Description: </h3>
-    <p>Spaghetti Carbonara RecipeCarbonara is a classic Roman pasta dish made with spaghetti, eggs, hard cheese (typically Pecorino Romano), cured pork (like guanciale or pancetta), and black pepper. Its signature rich and creamy sauce is created by tossing hot pasta with a mixture of eggs, cheese, and pork, which gently cooks the eggs without curdling them. </p>
+    <p>Spaghetti Carbonara RecipeCarbonara is a classic Roman pasta dish made with spaghetti, </p>
+    <p>eggs, hard cheese (typically Pecorino Romano), cured pork (like guanciale or pancetta), and black pepper. Its signature rich and</p>
+    <p> creamy sauce is created by tossing hot pasta with a mixture of eggs, cheese, and pork, which gently cooks the eggs without curdling them.</p></p>
 </body>
 </html>
