--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -10,6 +10,8 @@
     <h1>Spaghetti</h1>
     <img src="../images/spaghetti.png" height="310" width="310" alt="spaghetti"/>
     <h3>Description: </h3>
-    <p>Spaghetti is a long, thin, solid, cylindrical pasta made from durum wheat, water, and sometimes eggs. The name comes from the Italian word spaghetto, meaning "little string". It is a staple food in Italian cuisine and is most commonly served with a variety of sauces, such as tomato sauce with meatballs or a meat-based Bolognese.  </p>
+    <p>Spaghetti is a long, thin, solid, cylindrical pasta made from durum wheat, water, and sometimes eggs. </p>
+    <p>The name comes from the Italian word spaghetto, meaning "little string". It is a staple food in Italian cuisine  </p>
+    <p>and is most commonly served with a variety of sauces, such as tomato sauce with meatballs or a meat-based Bolognese. </p>
 </body>
 </html>
