--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,6 +10,8 @@
     <h1>Lasagna</h1>
     <img src="../images/lasagna.png" height="310" width="310" alt="lasagna"/>
     <h3>Description: </h3>
-    <p>Lasagna is both a type of wide, flat pasta and a popular baked dish made by layering this pasta with other ingredients, such as sauces (like tomato-based ragù or béchamel), cheese (such as ricotta, mozzarella, and Parmesan), and fillings like meat or vegetables. It is an Italian dish that is baked in an oven until the top is golden and the layers are tender and bubbly.  </p>
+    <p>Lasagna is both a type of wide, flat pasta and a popular baked dish made by layering </p>
+    <p>this pasta with other ingredients, such as sauces (like tomato-based ragù or béchamel), cheese (such as ricotta, mozzarella, and Parmesan)</p>
+    <p>, and fillings like meat or vegetables. It is an Italian dish that is baked in an oven until the top is golden and the layers are tender and bubbly.  </p></p>
 </body>
 </html>
