Added Ingredients and Steps to all of the recipes.html

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -12,6 +12,25 @@
     <h3>Description: </h3>
     <p>Spaghetti Carbonara RecipeCarbonara is a classic Roman pasta dish made with spaghetti, </p>
     <p>eggs, hard cheese (typically Pecorino Romano), cured pork (like guanciale or pancetta), and black pepper. Its signature rich and</p>
-    <p> creamy sauce is created by tossing hot pasta with a mixture of eggs, cheese, and pork, which gently cooks the eggs without curdling them.</p></p>
+    <p> creamy sauce is created by tossing hot pasta with a mixture of eggs, cheese, and pork, which gently cooks the eggs without curdling them.</p>
+
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>Pasta</li>
+        <li>Cured pork</li>
+        <li>Eggs</li>
+        <li>Cheese</li>
+        <li>Seasoning</li>
+    </ul>
+
+    <h3>Steps: </h3>
+    <ol>
+        <li>Boil the pasta water</li>
+        <li>Prepare the pork</li>
+        <li>Prepare the egg and cheese mixture</li>
+        <li>Combine ingredients off the heat</li>
+        <li>Achieve creamy consistency</li>
+        <li>Season and serve</li>
+    </ol>
 </body>
 </html>
