--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,9 +9,35 @@
     <a href="../index.html" target="_self" rel="norefferer noopener">Home</a>
     <h1>Lasagna</h1>
     <img src="../images/lasagna.png" height="310" width="310" alt="lasagna"/>
+
     <h3>Description: </h3>
     <p>Lasagna is both a type of wide, flat pasta and a popular baked dish made by layering </p>
     <p>this pasta with other ingredients, such as sauces (like tomato-based ragù or béchamel), cheese (such as ricotta, mozzarella, and Parmesan)</p>
-    <p>, and fillings like meat or vegetables. It is an Italian dish that is baked in an oven until the top is golden and the layers are tender and bubbly.  </p></p>
+    <p>, and fillings like meat or vegetables. It is an Italian dish that is baked in an oven until the top is golden and the layers are tender and bubbly.  </p>
+
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>Lasagna noodles (dry or fresh) </li>
+        <li>Meat and sauce</li>
+        <li>Cheese</li>
+        <li>Fresh parsley</li>
+        <li>Tomato paste</li>
+        <li>Garlic</li>
+        <li>Water</li>
+        <li>Onion</li>
+        <li>Seasonings like salt, pepper, oregano, and basil</li>
+    </ul>
+
+    <h3>Steps: </h3>
+    <ol>
+        <li>Make the Meat Sauce</li>
+        <li>Prepare the Cheese Mixture</li>
+        <li>Cook the Noodles</li>
+        <li>Assemble the Lasagna</li>
+        <li>Layer the Ingredients</li>
+        <li>Bake</li>
+        <li>Rest</li>
+    </ol>
+
 </body>
 </html>
