--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,9 +9,32 @@
     <a href="../index.html" target="_self" rel="norefferer noopener">Home</a>
     <h1>Spaghetti</h1>
     <img src="../images/spaghetti.png" height="310" width="310" alt="spaghetti"/>
+
     <h3>Description: </h3>
     <p>Spaghetti is a long, thin, solid, cylindrical pasta made from durum wheat, water, and sometimes eggs. </p>
     <p>The name comes from the Italian word spaghetto, meaning "little string". It is a staple food in Italian cuisine  </p>
     <p>and is most commonly served with a variety of sauces, such as tomato sauce with meatballs or a meat-based Bolognese. </p>
+
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>Spaghetti noodles</li>
+        <li>Ground meat</li>
+        <li>Tomato sauce/purée/paste</li>
+        <li>Aromatics </li>
+        <li>Seasonings </li>
+        <li>Olive oil</li>
+        <li>Grated hard cheese</li>
+    </ul>
+
+    <h3>Steps:</h3>
+    <ol>
+        <li>Boil Water</li>
+        <li>Add Salt</li>
+        <li>Add Spaghetti</li>
+        <li>Drain</li>
+        <li>Brown the Meat</li>
+        <li>Sauté Aromatics</li>
+        <li>Combine and Serve</li>
+    </ol>
 </body>
 </html>
