--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/carbonara.html" target="_self" rel="noreferrer noopener">Carbonara</a>
-    <a href="recipes/spaghetti.html" target="_self" rel="noreferrer noopener">Spaghetti</a>
-    <a href="recipes/lasagna.html" target="_self" rel="noreferrer noopener">Lasagna</a>
+    <ul><li><a href="recipes/carbonara.html" target="_self" rel="noreferrer noopener">Carbonara</a></li>
+    <li><a href="recipes/spaghetti.html" target="_self" rel="noreferrer noopener">Spaghetti</a></li>
+    <li><a href="recipes/lasagna.html" target="_self" rel="noreferrer noopener">Lasagna</a></li>
+    </ul>
+    
 </body>
 </html>
